RESOLVED FIXED281564
REGRESSION(285128@main)[GTK][WPE] Build error with gcc11/12
https://bugs.webkit.org/show_bug.cgi?id=281564
Summary REGRESSION(285128@main)[GTK][WPE] Build error with gcc11/12
Miguel Gomez
Reported 2024-10-16 01:38:11 PDT
The error is In file included from /host/home/magomez/webkit/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+Font.cpp:54, from /host/home/magomez/webkit/WebKit/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-2f84417a-24.cpp:4: /host/home/magomez/webkit/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+LengthPercentageDefinitions.h: In static member function ‘static constexpr bool WebCore::CSSPropertyParserHelpers::LengthPercentageValidator::isValid(WebCore::CSSUnitType, WebCore::CSSPropertyParserOptions)’: /host/home/magomez/webkit/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+LengthPercentageDefinitions.h:36:40: error: call to non-‘constexpr’ function ‘static bool WebCore::CSSPropertyParserHelpers::LengthValidator::isValid(WebCore::CSSUnitType, WebCore::CSSPropertyParserOptions)’ 36 | return LengthValidator::isValid(unitType, options); | ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~ In file included from /host/home/magomez/webkit/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+LengthPercentageDefinitions.h:27: /host/home/magomez/webkit/WebKit/Source/WebCore/css/parser/CSSPropertyParserConsumer+LengthDefinitions.h:33:17: note: ‘static bool WebCore::CSSPropertyParserHelpers::LengthValidator::isValid(WebCore::CSSUnitType, WebCore::CSSPropertyParserOptions)’ declared here 33 | static bool isValid(CSSUnitType unitType, CSSPropertyParserOptions options) | ^~~~~~~ [4525/8448] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-2f84417a-23.cpp.o This is not being triggered on the normal bots, that's why I think it's a gcc11/12 error only (or the bots have these errors disabled for some reason).
Attachments
zsun
Comment 1 2024-10-16 02:38:07 PDT
EWS
Comment 2 2024-10-16 23:35:24 PDT
Committed 285315@main (5148caa2836b): <https://commits.webkit.org/285315@main> Reviewed commits have been landed. Closing PR #35274 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.