Make the return type as constexpr for CSSPropertyParserHelpers::LengthValidator::isValid(). https://bugs.webkit.org/show_bug.cgi?id=281564

Reviewed by Sam Weinig.

To fix build error for gcc11/12 cases and to be in line with return types in other places.
As stated in the bug we have "call to non-‘constexpr’" error while calling
CSSPropertyParserHelpers::LengthValidator::isValid().
Some relevant restrictions of constextpr have been relaxed at [1] since gcc13.

[1] https://gcc.gnu.org/bugzilla/show_bug.cgi?id=106649

* Source/WebCore/css/parser/CSSPropertyParserConsumer+LengthPercentageDefinitions.h:
(WebCore::CSSPropertyParserHelpers::LengthPercentageValidator::isValid):

Canonical link: https://commits.webkit.org/285315@main